--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.10,<3.12"
 tensorflow-io-gcs-filesystem = "0.31.0"
 tensorflow-intel = "^2.12.0"
 tf2onnx = "^1.14.0"
+pyside6 = "^6.5.1"
 
 
 [tool.poetry.group.develop.dependencies]
